# Watchdog

./: .gdb_history  .gitignore  .hash  README.md  build.bat  hcp.py  hcp.spec  home_control_panel.spec  makefile  pyproject.toml  requirements.txt  run.bat  test.bat  test.py
assets/: icon.icns
assets/styles/: dark.css  light.css
data/: .conf  .hash  .logs  settings.conf
home-controller-system/: .gitignore  README.md  notes.md  pyproject.toml
home-controller-system/home_controller_system/: api_connection_proxy.py  client.py  connector.py  server.py  urls.py
home-controller-system/home_controller_system/video_relay/: __metadata_compiler__.py  main.py
home-controller-system/tests/: test_api_connection_proxy.py  test_home_controller_system.py  test_server.py
home_control_panel/: __init__.py  face_detection_use_case.py
home_control_panel/app/: __init__.py  app.py  main.py  settings.py  spacers.py
home_control_panel/service/: config.py  connection.py  face_detection.py  rtc_connection.py  services.py  settings.py  user.py
home_control_panel/tests/: test_controller.py  test_services.py  test_user.py
home_control_system/: __main__.py
home_control_system/app/: app.py  component.py  containers.py  home.py  popups.py  settings.py  spacers.py  style.py  styles.py  widgets.py
home_control_system/server/: camera.py  server.py
home_control_system/service/: __init__.py  (+7 more)
tests/: test_server.py
ui_files/: AddNewCameraDialog.ui  AddNewLocationDialog.ui  HCPMainWindow.ui  LoginDialog.ui  RepairCameraDialog.ui  SettingsDialog.ui  StreamView.ui  resources.qrc
(+63 files in other folders)
