[tool.poetry]
name = "home-controller-system"
version = "0.1.0"
description = ""
authors = ["Jonathen Sundy <jonathensundy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
poetrify = "^0.4.1"
black = "^19.10b0"
vidgear = "^0.1.7"
imutils = "^0.5.3"
numpy = "^1.18.5"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
